fix/dropdown overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 body {
   @apply font-sans;
+  background-color: whitesmoke;
 }
 
 
